--- a/g103precourse.html
+++ b/g103precourse.html
@@ -25,20 +25,29 @@ photo
       <div class="text-box"> <h1 class="heading-primary"> <span
       class="heading-primary-main">G103 PRECOURSE</span><br> <span
       class="heading-primary-sub">Hello There! You are tuned into the page
-      for:<br> Robert Arthur Fischer<br/> Just call me 'Artie' if ya
-      like!</span> </h1> </div>
+      for: Robert Arthur Fischer (Just call me 'Artie' if ya
+      like!)</span> </h1> </div>
 
     </header>
+
+    <section class="nav">
+      <h6>
+        <ul>
+          <li><a href="precoursefun.html" target="_blank">Precourse Page 2</a></li>
+          <li><a href="http://www.katyfischer.com" target="_blank">Artwork by Katy Fischer</a></li>
+        </ul>
+      </h6>
+    </section>
+
 <br>
     <section class="bio1">
       <h4>
         <p>
         <img src="images/maineCoast.jpg" alt="Maine Coast" align= "right" width=350 height=250>
         I was born in Milford Memorial Hospital in Milford, Delaware
-        (that's Sussex County for those interested). Delivered by the same doctor
-        who delivered my two older sisters. I went to Boston University for
-        undergraduate and spent several years after college working in marine mammal
-        rescue and rehabilitation. My volunteer opportunities and work for nonprofits have taken me
+        (that's Sussex County for those interested). I went to Boston University for
+        undergraduate (B.A. History) and spent several years after college working in marine mammal
+        rescue and rehabilitation and apple orchards. My volunteer opportunities and work for nonprofits have taken me
         all over the world and I hope to bring a similar spirit of giving and adventure to
         my career in web development. I've spent many of my years braving the winters on the Maine
         coast and am excited to be back in the sunny embrace of
@@ -56,35 +65,23 @@ photo
    </section>
 
    <hr>
-
-    <button class="mapBtn button">Hide/Show Map</button>
+<br>
+<button class="mapBtn button">Hide/Show Map</button>
       <div class="map">Below is a map of the various places I have lived (blue)
         and visited (red):
         <iframe src="https://www.google.com/maps/d/embed?mid=1fsrNavAWAJFj1jrTH1vXmfFhSCNWZNS5"
         width="640" height="480"></iframe>
       </div>
 
-<br>
-<br>
-<br>
-<br><!--can't figure out how to get that nav bar to always sit below-->
-<br>
-<br>
-<br>
-<br>
-<hr>
 
-    <section class="nav">
-      <h6>
-        <ul>
-          <li><a href="precoursefun.html" target="_blank">Precourse Page 2</a></li>
-          <li><a href="http://www.katyfischer.com" target="_blank">Artwork by Katy Fischer</a></li>
-        </ul>
-      </h6>
-    </section>
-
-
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
     <footer>
       <p id="today">copyright 2018
         <a href="http://www.rafischer.net" target="_blank">
