--- a/precoursefun.html
+++ b/precoursefun.html
@@ -59,19 +59,28 @@ Artie Fischer -->
     <h4 class="ol">
       <ol>Post-Galvanize ideas:
         <li>Something exciting and new and who knows...?!?!?</li>
-        <li>Geospacial Technologies (resources, mapping)</li>
+        <li>Language learning tech</li>
         <li>Nonprofit Sector (see:<a href="g103precourse.html" target="_blank">Precourse Bio Page)</a></li>
         <li>Work, work, work</li>
-        <li>Teaching is some form</li>
+        <li>Teaching in some form</li>
       </ol>
     </h4>
 
 
     <section>
-        <div id="animate">
-          <button class="btn">Click here to animate Sticky the Cat with JQuery</button>
+
+        <div id="animate"><h2>HELP STICKY GET THE PIZZA</h2><br>
+          <button id="left" class="btn">MOVE Left</button>
+          <button id="right" class="btn">MOVE Right</button>
+          <!-- <button class="btn">Click here to animate Sticky the Cat with JQuery</button> -->
+
+
+
+
         </div>
           <img id="cat" src="images/cat2.png" alt="Sticky T." width="240" height="240">
+          <img src="images/chips.jpeg" class="pizza" width="200"
+          height="200">
     </section>
       <!-- <hr>
       <footer><p id="today">Fischer 2018 <a href="http://www.rafischer.net"
